hw06/test/zm-putnum-error.fmj
public int main() {
    int[] n;
    int ret;
    n = new int[3];
    ret = 3;
    putnum(n); // error
    return ret;
}
